# resilient-media-processor

./: .gitignore  Makefile
docs/: 01_FEATURE.md  02_FEATURE.md  PRODUCT.md  TECHSTACK.md
infra/: main.tf
services/api/: Dockerfile  pyproject.toml
services/api/src/: dependencies.py  main.py
services/frontend/: Dockerfile  package-lock.json  package.json
services/frontend/src/: App.tsx  index.css
services/frontend/src/api/: jobs.ts
services/frontend/src/pages/: Upload.tsx
services/worker/: pyproject.toml
shared/: pyproject.toml
shared/src/resilient_commons/: __init__.py  models.py
