[project]
name = "media-processor-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]",
    "google-cloud-storage",
    "pydantic>=2.0.0",
    "resilient-commons"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "httpx"
]
